# sleap-io

./: .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  codecov.yml  demo_cvat_merge.py  environment.yml  io_test.ipynb  load_test.ipynb  mkdocs.yml  ntbk.ipynb  nwb_data_ntbk.ipynb  nwb_visualization.ipynb  presentation.ipynb  profile_output  profiling.ipynb  pyproject.toml  save_test.ipynb  setup.cfg  slp_visualization.ipynb  test_file1.slp  test_file2.slp  test_nwb_export.py  versions.json  visualizer.py
.claude/commands/: coverage.md  lint.md  pr-description.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  codespell.yml  docs.yml  lint.yml  pr-preview.yml  type_checks.yml
0.1/: 404.html  index.html  sitemap.xml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/formats/: index.html
0.1.0/model/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/formats/: index.html
0.1.1/model/: index.html
0.1.1/search/: search_index.json
0.1.10/: 404.html  index.html  objects.inv  sitemap.xml
0.1.10/formats/: index.html
0.1.10/model/: index.html
0.1.10/search/: search_index.json
0.1.11/: 404.html  index.html  objects.inv  sitemap.xml
0.1.11/changelog/: index.html
0.1.11/css/: mkdocstrings.css
0.1.11/formats/: index.html
0.1.11/model/: index.html
0.1.11/search/: search_index.json
0.1.4/: 404.html  index.html  objects.inv  sitemap.xml
0.1.4/formats/: index.html
0.1.4/model/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  objects.inv  sitemap.xml
0.1.5/formats/: index.html
0.1.5/model/: index.html
0.1.5/search/: search_index.json
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/formats/: index.html
0.1.6/model/: index.html
0.1.6/search/: search_index.json
0.1.7/: 404.html  index.html  sitemap.xml
0.1.7/formats/: index.html
0.1.7/model/: index.html
0.1.7/search/: search_index.json
0.1.9/: 404.html  index.html  sitemap.xml
0.1.9/formats/: index.html
0.1.9/model/: index.html
0.1.9/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/examples/: index.html
0.3.0/formats/: index.html
0.3.0/model/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/changelog/: index.html
0.4.0/examples/: index.html
0.4.0/formats/: index.html
0.4.0/model/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/changelog/: index.html
0.4.1/examples/: index.html
0.4.1/formats/: index.html
0.4.1/model/: index.html
0.4.1/search/: search_index.json
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/changelog/: index.html
0.5.2/examples/: index.html
0.5.2/formats/: index.html
0.5.2/merging/: index.html
0.5.2/model/: index.html
0.5.2/search/: search_index.json
dev/: 404.html  cli.md  examples.md  index.html  index.md  install.md  llms.txt  objects.inv  rendering.md  sitemap.xml
dev/changelog/: index.html
dev/cli/: index.html
dev/codecs/: index.html
dev/cropping/: index.html
dev/examples/: index.html
dev/formats/: index.html  index.md  slp.md
dev/guides/: index.html
dev/install/: index.html
dev/merging/: index.html
dev/model/: 3d.md  categories.md  index.html  index.md  poses.md  regions.md  rois.md  segmentation.md
dev/remote/: index.html
dev/rendering/: index.html
dev/search/: search_index.json
dev/transforms/: index.html
docs/: NAV.md  cli.md  cropping.md  examples.md  formats.md  index.md  install.md  merging.md  model.md  remote.md  rendering.md  transforms.md
docs/css/: mkdocstrings.css
docs/formats/: analysis_h5.md  coco.md  csv.md  dlc.md  index.md  nwb.md  slp.md  tiff.md
docs/model/: 3d.md  boxes.md  categories.md  embedding.md  events.md  index.md  labels.md  poses.md  regions.md  segmentation.md  video.md
examples/: merge_annotations.py
hooks/: copy_source_markdown.py  markdown_exec_pycon.py
pr/318/: index.html
pr/319/: 404.html  sitemap.xml
pr/320/: index.html
pr/321/: index.html
pr/323/: 404.html  rendering.md
pr/324/: 404.html  cli.md  index.html
pr/325/: index.html  objects.inv
pr/326/: 404.html  cli.md  index.html  objects.inv  sitemap.xml  transforms.md
pr/328/: codecs.md  objects.inv
pr/331/: objects.inv  sitemap.xml
pr/335/: sitemap.xml
pr/336/: objects.inv
pr/338/: sitemap.xml
pr/340/: sitemap.xml
pr/347/: 404.html  cli.md  index.html  sitemap.xml
pr/348/: sitemap.xml
pr/350/: 404.html  examples.md  index.html  sitemap.xml
pr/351/: sitemap.xml
scripts/: benchmark_lazy.py  cov_summary.py  gen_changelog.py  gen_llms_txt.py  gen_ref_pages.py  generate_rendering_docs.py  get_changed_docs_urls.py  reorder_versions.py
sleap_io/: __init__.py  version.py
tests/: __init__.py  conftest.py  test_docs.py
tmp/: skeletons-batch2.s1.p0.json  skeletons-batch3.s1.p2.json
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.1/: 404.html  index.html  sitemap.xml
v0.5.2/: 404.html  index.html  sitemap.xml
v0.5.3/: 404.html  index.html  sitemap.xml
v0.5.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.5/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.6/: 404.html  index.html  sitemap.xml
v0.5.7/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.8/: 404.html  index.html  sitemap.xml
v0.6.0/: 404.html  index.html  sitemap.xml
v0.6.1/: 404.html  index.html  merging.md  objects.inv  sitemap.xml
v0.6.2/: 404.html  index.html  sitemap.xml
v0.6.3/: 404.html  index.html  sitemap.xml
v0.6.4/: 404.html  index.html  rendering.md  sitemap.xml
v0.6.5/: 404.html  index.html  sitemap.xml
v0.7.0/: 404.html  index.html  sitemap.xml
v0.7.1/: 404.html  index.html  sitemap.xml
v0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/: 404.html  index.html  sitemap.xml
v0.9.1/: 404.html  index.html  objects.inv  sitemap.xml
(+10340 files in other folders)
