[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sleap-io"
authors = [
    {name = "Divya Murali", email = "divya@talmolab.org"},
    {name = "Liezl Maree", email = "lmaree@salk.edu"},
    {name = "David Samy", email = "davidasamy@gmail.com"},
    {name = "Talmo Pereira", email = "talmo@salk.edu"}]
description="Standalone utilities for working with pose data from SLEAP and other tools."
requires-python = ">=3.8"
keywords = ["sleap", "pose tracking", "pose estimation", "behavior"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"]
dependencies = [
    "numpy",
    "attrs",
    "h5py>=3.8.0",
    "pynwb",
    "ndx-pose>=0.2.1",
    "ndx-multisubjects>=0.1.1",
    "pandas",
    "simplejson",
    "imageio",
    "imageio-ffmpeg>=0.5.0",
    "tifffile",
    "tqdm",
    "pyyaml",
    "rich_click",
    "lazy-loader>=0.4",
    "skia-python>=87.0",
    "colorcet>=3.0"]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "sleap_io.version.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}

[project.optional-dependencies]
# PEP 621: End-user installable extras
opencv = ["opencv-python"]
pyav = ["av<16.0.0"]
mat = ["pymatreader"]
polars = ["polars", "pyarrow"]
all = ["opencv-python", "av<16.0.0", "pymatreader", "polars", "pyarrow"]

[dependency-groups]
# PEP 735: Dev-only dependencies (`dev` is installed automatically by `uv`)
dev = [
    "pytest",
    "pytest-cov",
    "pytest-watch",
    "ruff",
    "toml",
    "twine",
    "build",
    "mkdocs-material[imaging]",
    "mkdocs-jupyter",
    "mkdocstrings[python]>=0.18",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mike",
    "py-spy>=0.4.1",
]

[project.urls]
Homepage = "https://io.sleap.ai"
Repository = "https://github.com/talmolab/sleap-io"

[project.scripts]
sio = "sleap_io.io.cli:cli"
sleap-io = "sleap_io.io.cli:cli"

[tool.setuptools.packages.find]
exclude = ["site"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "D",    # pydocstyle
    "I",    # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103"]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.css'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'THW,HWT,THWC,CHWT'

[tool.coverage.run]
branch = true
relative_files = true
parallel = true
concurrency = ["multiprocessing", "thread"]
source = ["sleap_io"]
omit = [
  "*/tests/*",
  "*/.venv/*",
  "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "if __name__ == \"__main__\":",
]
precision = 1
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
