[metadata]
name = sleap-io
version = 0.0.1
description = Standalone utilities for working with SLEAP pose data.
long_description = file: README.md, LICENSE
keywords = sleap, pose tracking, pose estimation, behavior
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy>=1.19.5
    attrs>=21.2.0
    h5py>=3.1.0
    pandas

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    mypy
    pydocstyle
    toml

[mypy]
follow_imports = skip
ignore_missing_imports = True
ignore_missing_imports_per_module = True
warn_unused_configs = True

[pydocstyle]
convention = google