[metadata]
name = sleap-io
version = attr: sleap_io.__version__
author = Talmo Pereira
author_email = talmo@salk.edu
maintainer = Talmo Pereira
maintainer_email = talmo@salk.edu
url = https://github.com/talmolab/sleap-io
description = Standalone utilities for working with SLEAP pose data.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = sleap, pose tracking, pose estimation, behavior
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy>=1.19.5
    attrs>=21.2.0
    h5py>=3.1.0
    pynwb
    ndx-pose
    pandas
    typing_extensions
    tables
    ruamel.yaml

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    mypy
    pydocstyle
    toml
    twine
    build

[options.exclude_package_data]
tests = *
docs = *

[options.packages.find]
exclude =
    tests*
    docs*

[mypy]
follow_imports = skip
ignore_missing_imports = True
ignore_missing_imports_per_module = True
warn_unused_configs = True

[pydocstyle]
convention = google
match-dir = 'sleap_io'
